2009-06-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/enum.c (munge_enum_str_to_int),
	  src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Added additional checks for strtol() & strtoul().

2009-05-04  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Added AC_GNU_SOURCE macro (note that it is called
	  before any macros that run the C compiler).  As of glibc 2.8, the
	  _GNU_SOURCE feature test macro must be defined in order to obtain the
	  ucred struct definition.

2009-04-27  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.61, automake-1.10.1.

	* configure.ac: Added AM_PROG_CC_C_O for compiling auth_recv.c with
	  per-target flags.

2009-04-23  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

	* src/munge/munge.1.in, src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/munged/munged.8.in: Changed "--socket string" to "--socket path".

	* src/etc/munge.init.in: Swapped order of CONFIG & DAEMON_ARGS vars.

2009-04-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed LSB Default-Start / Default-Stop and
	  chkconfig runlevels so daemon is not started by default.

2008-12-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_uid_alloc): Added check for valid 'user'.

	* src/munged/gids.c (_gids_uid_alloc): Updated usage comment.

	* src/munged/gids.c (_gids_hash_create): Added guard for processing
	  results of getgrent() to avoid dereferencing gr_mem if NULL.

	* src/munged/gids.c (_gids_hash_create): Added strerror() to log msg
	  for getgrent() failure.

	* src/munged/gids.c (_gids_hash_create): Added 'do_group_db_close'
	  guard var for endgrent() in 'err' path.

	* src/munged/gids.c (_gids_update): Restructured in order for the gids
	  mutex to be locked/unlocked only once instead of twice per call.

2008-08-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c, src/libmunge/encode.c, src/munged/dec.c,